# sk-sdk-python

./: .bumpversion.cfg  .dockerignore  .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: dagger.yml
dagger/: test.py
rules/: Makefile.compose  Makefile.dagger  Makefile.git  Makefile.pip  Makefile.python  Makefile.settings
src/sinkove/: __main__.py
