[metadata]
name = sinkove
version = 0.0.2
description = Library for interacting with Sinkove datasets
long_description = file: README.md
long_description_content_type = text/markdown
author = Luan
author_email = luan@sinkove.com
url = https://github.com/sinkove/sk-sdk-python.git
keywords =
	datasets
	machinelearning
	medical
	images
	sdk
	synthetic
license = MIT
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Operating System :: POSIX
	Programming Language :: Python
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
package_dir =
  = src
packages = find:
zip_safe = False
platforms = any
include_package_data = True
install_requires =
  typing-extensions >= 4.0.1
setup_requires =
  setuptools >= 58.1.0
  wheel
  build

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-mock
    coverage
    flake8
dev =
    bumpversion
    ipython
    ipdb
    twine
    wheel
    build
    black
    pre-commit
    pyright
    isort
	dagger-io
docs =
    docutils
    sphinx-autobuild

[flake8]
ignore = E501, E731
exclude = .tox,.git,__pycache__,docs/conf.py,build,dist,tests,src/**/__init__.py,src/**/all.py
max-complexity = 10

[pep8]
ignore = E501,E731
max-line-length = 80